<resources>
    <string name="app_name">ImageSlider</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="department">Department</string>
    <string name="our_showroom">Our Showrooms</string>
    <string name="contact">Contact Us</string>
    <string name="feedback">Feedback</string>
    <string name="logout">Logout</string>


</resources>
