<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="235dp"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:layout_gravity="left|start"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#175852">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="235dp"
    android:layout_height="match_parent"
   android:fitsSystemWindows="true"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="left"

        android:background="#175852">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:gravity="left|center_vertical"
            android:background="#175852"
            android:layout_marginLeft="20dp"
            android:id="@+id/home_menu">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:id="@+id/homeepic"
                android:src="@drawable/home"

                />
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Home"
                    android:id="@+id/homeview"
                    android:textColor="#F3E84F"
                    android:layout_marginLeft="20dp"
                    android:textSize="20dp"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#F3E84F">

        </View>



    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="left|center_vertical"
        android:background="#175852"
        android:layout_marginLeft="20dp"
       android:id="@+id/department_menu">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/department"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/department"
            android:textColor="@android:color/white"
            android:layout_marginLeft="10dp"
            android:textSize="16dp"
            android:padding="15dp"/>
    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@android:color/white"
        android:visibility="gone"/>


  <!--  <ExpandableListView
        android:id="@+id/navList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left|start"
        android:divider="@android:color/white"
        android:visibility="gone"
        android:dividerHeight="0.5dp"
        android:groupIndicator="@null"
        android:childDivider="#878787"/>-->


    <ListView
        android:id="@+id/listView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
       android:visibility="gone"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@android:color/white"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="left|center_vertical"
        android:background="#175852"
        android:layout_marginLeft="20dp"
        android:id="@+id/showroom_menu">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/product"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/our_showroom"
            android:textColor="@android:color/white"
            android:layout_marginLeft="10dp"
            android:textSize="16dp"
            android:padding="15dp"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@android:color/white"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="left|center_vertical"
        android:background="#175852"
        android:layout_marginLeft="20dp"
        android:id="@+id/contact_menu">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/contact"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact"
            android:textColor="@android:color/white"
            android:layout_marginLeft="10dp"
            android:textSize="16dp"
            android:padding="15dp"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@android:color/white"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="left|center_vertical"
        android:background="#175852"
        android:layout_marginLeft="20dp"
        android:id="@+id/feedback_menu">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/feedback"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feedback"
            android:textColor="@android:color/white"
            android:layout_marginLeft="10dp"
            android:textSize="16dp"
            android:padding="15dp"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@android:color/white"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="left|center_vertical"
        android:background="#175852"
        android:layout_marginLeft="20dp"
        android:id="@+id/logout_menu">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/logout"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:textColor="@android:color/white"
            android:layout_marginLeft="10dp"
            android:textSize="16dp"
            android:padding="15dp"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@android:color/white"
        />

</LinearLayout>
</ScrollView>
